# heurisTOS

./: README.md  pyproject.toml
src/heuristos/: crawl.py
src/heuristos/parser/: __init__.py  html.py  shared.py
tests/: autodesk.html  html_policy_parser.py
